--- a/hass/configuration.yaml
+++ b/hass/configuration.yaml
@@ -52,5 +52,6 @@ scene: !include scenes.yaml
 input_text: !include input_text.yaml
 input_select: !include input_select.yaml
 google_assistant: !include google_assistant.yaml
+notify: !include notify.yaml
 
 
