--- a/hass/sensor.yaml
+++ b/hass/sensor.yaml
@@ -46,4 +46,13 @@
   state_topic: "control/doorbell/return"
   icon: mdi:alarm-bell
 
-    
+- platform: time_date
+  display_options:
+    - 'time'
+
+- platform: template
+  sensors:
+    time_open_door_sensor:
+      friendly_name: "Time Door Open"
+      value_template: '{% if is_state("sensor.sensor_door","Mở cửa") %} {{ relative_time(states.sensor.sensor_door.last_updated) }} {% endif %} {% if is_state("sensor.sensor_door","Đóng cửa") %} None {% endif %}'
+      entity_id: sensor.time
