--- a/hass/sensor.yaml
+++ b/hass/sensor.yaml
@@ -56,3 +56,32 @@
       friendly_name: "Time Door Open"
       value_template: '{% if is_state("sensor.sensor_door","Mở cửa") %} {{ relative_time(states.sensor.sensor_door.last_updated) }} {% endif %} {% if is_state("sensor.sensor_door","Đóng cửa") %} None {% endif %}'
       entity_id: sensor.time
+
+
+- platform: command_line
+  name: "CPU Temperature"
+  command: "cat /sys/class/thermal/thermal_zone0/temp"
+  unit_of_measurement: "°C"
+  value_template: '{{ value | multiply(0.001) | round(1) }}'
+
+- platform: systemmonitor
+  resources:
+    - type: disk_use_percent
+      arg: /
+    - type: disk_free
+      arg: /
+    - type: memory_use_percent
+    - type: network_in
+      arg: eth0
+    - type: network_out
+      arg: eth0
+    - type: ipv4_address
+      arg: eth0
+    - type: ipv6_address
+      arg: eth0
+    - type: throughput_network_in
+      arg: eth0
+    - type: throughput_network_out
+      arg: eth0 
+    - type: processor_use
+    - type: last_boot
